fix(elements): panel overflow
- fixes issue when panel width is smaller than content and content can't overflow within the panel

--- a/projects/elements/src/page/page-panel/page-panel.css
+++ b/projects/elements/src/page/page-panel/page-panel.css
@@ -15,6 +15,7 @@
   width: var(--width);
   max-width: var(--max-width);
   max-height: var(--max-height);
+  overflow: auto;
 }
 
 [internal-host] {
